# editor-v3

./: README.md
editor_v5/: CMakeLists.txt  bugreportdialog.cpp  bugreportdialog.h  calculatordialog.cpp  calculatordialog.h  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  richtexteditor.cpp  richtexteditor.h
